# scb-opendata-mcp

./: .gitignore  .pdm-python  AGENTS.md  README.md  pyproject.toml  server.json
docs/: PxAPI-2.yml  fetch_tables.py  generate_table_docs.py
skills/scb-business-economy/: SKILL.md
skills/scb-education-research/: SKILL.md
skills/scb-environment/: SKILL.md
skills/scb-housing-construction/: SKILL.md
skills/scb-international-trade/: SKILL.md
skills/scb-labor-market/: SKILL.md
skills/scb-living-conditions/: SKILL.md
skills/scb-opendata-mcp-workflows/: SKILL.md
skills/scb-population/: SKILL.md
src/scb_opendata_mcp/: __init__.py  models.py  server.py
tests/: test_integration.py  test_model_schemas.py  test_server.py
