[project]
name = "scb-opendata-mcp"
version = "0.1.0"
description = "Statistics Sweden’s open data made available as an MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=4.8.0",
    "fastmcp>=3.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
]
authors = [
    {name = "Ashwin V. Mohanan", email = "dev@fluid.quest"},
]
license = {text = "MIT"}

[project.scripts]
scb_opendata_mcp = "scb_opendata_mcp:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
